--- a/Web.Statu/Views/Home/Reporty.cshtml
+++ b/Web.Statu/Views/Home/Reporty.cshtml
@@ -123,6 +123,15 @@
         <div class="col-sm-12 col-sm-4">
             <h3 style="margin-top:0;">Osoby a firmy</h3>
             <div class="col-block-shadow newbadge top-right">
+                <h3><a href="/Report/27">Pomáhá stát v koronavirové krizi jak slibuje?</a></h3>
+                <p>
+                    Jaká je slibovaná a jaká je skutečná pomoc státu v dobách koronavirové epidemie?
+
+                    Dopady pandemie koronaviru a restart ekonomiky by měli politici řešit rychle, jednoduše a účinně. Sliby politiků jsme slyšeli, pojďme se kouknout na skutečnou pomoc.
+                </p>
+                <p><a class="btn btn-default" href="/Report/24" role="button">Podrobnosti »</a></p>
+            </div>
+            <div class="col-block-shadow newbadge top-right">
                 <h3><a href="/Report/25">Které politické strany mají největší podíl na řízení státu?</a></h3>
                 <p>
                     Které strany a hnutí v ČR dominují?
@@ -175,10 +184,10 @@
             </div>
 
             @*<div class="col-block-shadow">
-                <h3><a href="/Report/6">Nové úřady a firmy v rejstříku smluv</a></h3>
-                <p>Firmy a úřady, které se nyní objevili v rejstříku poprvé.</p>
-                <p><a class="btn btn-default" href="/Report/6" role="button">Podrobnosti »</a></p>
-            </div>*@
+            <h3><a href="/Report/6">Nové úřady a firmy v rejstříku smluv</a></h3>
+            <p>Firmy a úřady, které se nyní objevili v rejstříku poprvé.</p>
+            <p><a class="btn btn-default" href="/Report/6" role="button">Podrobnosti »</a></p>
+        </div>*@
             <div class="col-block-shadow">
                 <h3><a href="/Report/9">Firmy založené kolem data uzavření smlouvy</a></h3>
                 <p>Všechny firmy založené těsně před uzavřením smlouvy nebo až po uzavření smlouvy.</p>
