--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
                 <li>
                     <a href="/pridatse">Přidat se</a>
                     @*<a href="https://github.com/HlidacStatu/Web/issues" target="_blank" style="color:orange"><span class="glyphicon glyphicon-alert"></span>&nbsp;Nahlásit chybu</a>*@
-                    <a href="https://www.darujme.cz/projekt/1200384">Podpořit nás</a>
+                    <a  onclick="return trackOutLink(this,'Index.title');" href="https://www.darujme.cz/projekt/1200384">Podpořit nás</a>
                 </li>
             </ul>
         </div>
@@ -107,9 +107,9 @@ background: -webkit-linear-gradient(top,  #fde54c 0%,#fde54c 59%,#ffffff 100%); 
 background: linear-gradient(to bottom,  #fde54c 0%,#fde54c 59%,#ffffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fde54c', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
 ">
-                <a target="_blank" href="https://www.rekonstrukcestatu.cz/cs/nezhasinat/"><img src="/Content/img/icon-person-watcher.svg"></a>
+                <a target="_blank"  onclick="return trackOutLink(this,'Index');" href="https://www.rekonstrukcestatu.cz/cs/nezhasinat/"><img src="/Content/img/icon-person-watcher.svg"></a>
                 <h2 class="new-title">
-                    <a target="_blank" href="https://www.rekonstrukcestatu.cz/cs/nezhasinat/" style="color:black">Nezhasínat!</a>
+                    <a  onclick="return trackOutLink(this,'index');" target="_blank" href="https://www.rekonstrukcestatu.cz/cs/nezhasinat/" style="color:black">Nezhasínat!</a>
                     <img src="/content/img/rekonstrukce-statu.svg" style="height:25px;width:auto;" /><img src="/content/img/Hlidac-statu-ctverec-notext.svg" style="height:30px;width:auto;" />
                 </h2>
             </div>
@@ -156,7 +156,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fde54c', end
                     </tr>
                 </table>
                 <div class="block-button-wrapper">
-                    <a href="/report/27" class="btn btn-default btn-default-new">Podrobnosti o podporách</a>
+                    <a onclick="return trackOutLink(this,'Index');" href="/report/27" class="btn btn-default btn-default-new">Podrobnosti o podporách</a>
                 </div>
             </div>
         </div>
