--- a/Web.Statu/Views/Home/Reports/27_COVIDPodpora.cshtml
+++ b/Web.Statu/Views/Home/Reports/27_COVIDPodpora.cshtml
@@ -42,7 +42,7 @@ https://www.echo24.cz/a/Skptx/pomoc-firmam-je-extremne-pomala-vlada-slibila-bili
 <p>
     Dopady pandemie koronaviru a restart ekonomiky by měli politici řešit rychle, jednoduše a účinně. Sliby politiků jsme slyšeli,
     pojďme se kouknout na skutečnou pomoc.
-    Jde o součást společného projektu s Rekonstrukcí státu <a target="_blank" href="https://www.rekonstrukcestatu.cz/cs/nezhasinat/">„NEZHASÍNAT!”</a>, ve které dodáváme politikům sadu doporučení, jak se popasovat s krizí v mezích zákonů a rozjet ekonomiku efektivně a transparentně.
+    Jde o součást společného projektu s Rekonstrukcí státu <a  onclick="return trackOutLink(this,'Report27');" target="_blank" href="https://www.rekonstrukcestatu.cz/cs/nezhasinat/">„NEZHASÍNAT!”</a>, ve které dodáváme politikům sadu doporučení, jak se popasovat s krizí v mezích zákonů a rozjet ekonomiku efektivně a transparentně.
 </p>
 
 <hr style="margin:50px 100px 50px 100px" />
@@ -67,7 +67,7 @@ https://www.echo24.cz/a/Skptx/pomoc-firmam-je-extremne-pomala-vlada-slibila-bili
                     korun.
                 </span>
             </p>
-            <footer>Ministryně financí Alena Schillerová <cite title="Česká televize"><a href="https://www.ceskatelevize.cz/ivysilani/1097181328-udalosti/220411000100422/obsah/763721-podpora-ekonomiky">21. dubna 2020 v České televizi</a></cite></footer>
+            <footer>Ministryně financí Alena Schillerová <cite title="Česká televize"><a onclick="return trackOutLink(this,'Report27');" href="https://www.ceskatelevize.cz/ivysilani/1097181328-udalosti/220411000100422/obsah/763721-podpora-ekonomiky">21. dubna 2020 v České televizi</a></cite></footer>
             <div style="clear:both;"></div>
         </blockquote>
     </div>
@@ -135,7 +135,7 @@ https://www.echo24.cz/a/Skptx/pomoc-firmam-je-extremne-pomala-vlada-slibila-bili
 <h2 style="margin-top:50px;">Detailně jednotlivé programy</h2>
 <div class="row">
     <div class="col-xs-12">
-        <p>Zdrojová data: databáze <a href="@ds.GetUrl(false)">@(ds.Registration().name) na Hlídači státu</a>. Data jsou získána od jednotlivých úřadů.</p>
+        <p>Zdrojová data: databáze <a  onclick="return trackOutLink(this,'Report27');" href="@ds.GetUrl(false)">@(ds.Registration().name) na Hlídači státu</a>. Data jsou získána od jednotlivých úřadů.</p>
         <div class="table-new table-new--dotted">
             <table>
                 <tbody>
@@ -160,7 +160,7 @@ https://www.echo24.cz/a/Skptx/pomoc-firmam-je-extremne-pomala-vlada-slibila-bili
                                 )
                         {
                             <tr>
-                                <td><a href="/data/Detail/pomoc-covid/@item.id">Detail</a></td>
+                                <td><a  onclick="return trackOutLink(this,'Report27');" href="/data/Detail/pomoc-covid/@item.id">Detail</a></td>
                                 <td>@item.ministerstvo</td>
                                 <td>
                                     <span>@item.program</span>
@@ -222,7 +222,7 @@ https://www.echo24.cz/a/Skptx/pomoc-firmam-je-extremne-pomala-vlada-slibila-bili
                     <b class="text-danger">tisíc miliard korun</b>.
                 </span>
             </p>
-            <footer>Premiér ČR Andrej Babiš <cite title="Česká televize"><a href="https://www.irozhlas.cz/zpravy-domov/koronavirus-v-cesku-andrej-babis-chytra-karantena-projev_2004092018_pj">9. dubna 2020 v České televizi</a></cite></footer>
+            <footer>Premiér ČR Andrej Babiš <cite title="Česká televize"><a  onclick="return trackOutLink(this,'Report27');" href="https://www.irozhlas.cz/zpravy-domov/koronavirus-v-cesku-andrej-babis-chytra-karantena-projev_2004092018_pj">9. dubna 2020 v České televizi</a></cite></footer>
             <div style="clear:both;"></div>
         </blockquote>
         <div style="margin:20px"></div>
