--- a/Web.Statu/Views/Manage/Index.cshtml
+++ b/Web.Statu/Views/Manage/Index.cshtml
@@ -229,6 +229,7 @@
                                         <option value="orange-invert">orange-invert</option>
                                         <option value="orange-light">orange-light</option>
                                         <option value="red-dark">red-dark</option>
+                                        <option value="purple">purple</option>
                                     </select>
                                     <button type="submit" class="btn btn-default btn-sm">Generuj</button>
                                 </div>
