--- a/Web.Statu/Views/Home/ImageBannerCore16x9_quote.cshtml
+++ b/Web.Statu/Views/Home/ImageBannerCore16x9_quote.cshtml
@@ -6,7 +6,7 @@
     string height = "1080px";
 
     string defaultColor = "blue-dark";
-    string[] colors = new string[] { "blue-dark", "blue-light", "green", "orange", "orange-invert", "orange-light", "red-dark", "purple" };
+    string[] colors = new string[] { "blue-dark", "blue-light", "green", "orange", "orange-invert", "orange-light", "red-dark", "purple", "lepsicesko" };
     if (!colors.Contains(Model.color))
     {
         Model.color = defaultColor;
