reports better cache

--- a/Web.Statu/Views/Data/Edit.cshtml
+++ b/Web.Statu/Views/Data/Edit.cshtml
@@ -145,7 +145,7 @@
         <div class="form-group">
             @Html.Label("defaultOrderBy", "Atribut, podle kterých se třídí a směr", new { @class = "col-sm-2 control-label" })
             <div class="col-sm-10">
-                <div class="small-darkgray-text">jméno atributu =mezera= Asc|Desc</div>
+                <div class="small-darkgray-text">jméno atributu =mezera= asc|desc</div>
                 @Html.TextBoxFor(m=> m.defaultOrderBy, new { @class = "form-control" })
             </div>
         </div>
