--- a/Web.Statu/Views/Home/Reports/27_COVIDPodpora.cshtml
+++ b/Web.Statu/Views/Home/Reports/27_COVIDPodpora.cshtml
@@ -135,7 +135,7 @@ https://www.echo24.cz/a/Skptx/pomoc-firmam-je-extremne-pomala-vlada-slibila-bili
 <h2 style="margin-top:50px;">Detailně jednotlivé programy</h2>
 <div class="row">
     <div class="col-xs-12">
-        <p>Zdrojová data: databáze <a  onclick="return trackOutLink(this,'Report27');" href="@ds.GetUrl(false)">@(ds.Registration().name) na Hlídači státu</a>. Data jsou získána od jednotlivých úřadů.</p>
+        <p>Zdrojová data: databáze <a  onclick="return trackOutLink(this,'Report27');" href="@ds.GetUrl(false)">@(ds.Registration().name) na Hlídači státu</a>. Data jsou získána od jednotlivých úřadů a od <a href="https://twitter.com/HelenaHorska">analytičky RB Heleny Horské</a>.</p>
         <div class="table-new table-new--dotted">
             <table>
                 <tbody>
