--- a/Web.Statu/Views/Home/AnalyzaPlatcu.cshtml
+++ b/Web.Statu/Views/Home/AnalyzaPlatcu.cshtml
@@ -16,7 +16,7 @@
 
 
 @{
-    ViewBag.Title = Model.Text ?? "Analýza Hlídače státu";
+    ViewBag.Title = Model.Text ?? "Hlídač státu: Analýza plátců peněz (objednatelů vyhledaných smluv) "; ;
 }
 
 @{
@@ -71,7 +71,7 @@
     //TODO parallel
     foreach (var item in platci.OrderByDescending(o => o.Value.Data[2018].CelkemCena).Take(50))
     {
-        coreData.Add(item.Key, new HlidacStatu.Lib.Analysis.QueryStatistic(HlidacStatu.Lib.Searching.Tools.ModifyQueryAND($"icoplatce:{item.Key}",$"{Model.Query}")));
+        coreData.Add(item.Key, new HlidacStatu.Lib.Analysis.QueryStatistic(HlidacStatu.Lib.Searching.Tools.ModifyQueryAND($"icoplatce:{item.Key}", $"{Model.Query}")));
     }
 
     if (platci.Count > 50)
@@ -124,10 +124,12 @@
             );
     }
 
-    var globalSearch = HlidacStatu.Lib.Data.Search.GeneralSearch(Model.Query,1,5);
+    var globalSearch = HlidacStatu.Lib.Data.Search.GeneralSearch(Model.Query, 1, 5);
 
 
 }
+
+<h2>@ViewBag.Title</h2>
 
 @if (!string.IsNullOrEmpty(Model.Description))
 {
@@ -158,7 +160,7 @@
                      "Rok", "Kč",
                         HlidacStatu.Web.Framework.Report.GlobalStatistics.HodnotaSmluvPerZverejneni(Model.Query, Nest.DateInterval.Year),
                         xValueFormat: "{value:%Y}")
-                        ,""
+                        , ""
                     )
 
     </div>
@@ -171,11 +173,8 @@
                             coreRDS.Filter(new string[] { "Title", "Cena_Y_2019" }, 10,"2019" ),
                             coreRDS.Filter(new string[] { "Title", "Cena_Y_2018" }, 10,"2018" ),
                     },
-                    tooltipFormatFull: "<center><small>{point.category}</small><br /><b>{point.y:,.0f}</b></center>",
-                    loadEvents: @"function(event) {
-                            this.series.forEach(function(d,i){if(d.index==1)d.hide()})
-                        }"
-                    ),""
+                    tooltipFormatFull: "<center><small>{point.category}</small><br /><b>{point.y:,.0f}</b></center>"
+                    ), ""
                 )
     </div>
 </div>
@@ -191,7 +190,7 @@
         @UtilChart.RenderReport("Počet uzavřených smluv v jednotlivých letech", ReportModel.QueueItem.types.chart,
                     UtilChart.SimpleBarChart(true, true, 360, "price_year_chart_pocet", "Rok", "Počet",
                         HlidacStatu.Web.Framework.Report.GlobalStatistics.PocetSmluvPerZverejneni(Model.Query, Nest.DateInterval.Year), xValueFormat: "{value:%Y}")
-                        ,""
+                        , ""
                     )
 
     </div>
@@ -206,11 +205,8 @@
                             coreRDS.Filter(new string[] { "Title", "Pocet_Y_2018" }, 10,"2018" ),
                             coreRDS.Filter(new string[] { "Title", "Pocet_Y_2017" }, 10,"2017" ),
                     },
-                    tooltipFormatFull: "<center><small>{point.category}</small><br /><b>{point.y:,.0f}</b></center>",
-                    loadEvents: @"function(event) {
-                            this.series.forEach(function(d,i){if(d.index==1)d.hide()})
-                        }"
-                    ),""
+                    tooltipFormatFull: "<center><small>{point.category}</small><br /><b>{point.y:,.0f}</b></center>"
+                    ), ""
                 )
     </div>
 </div>
@@ -221,12 +217,12 @@
         coreRDS.Filter(
             new string[] {
                 "Title",
-                "Cena_Y_2020", "CenaChangePercent_Y_2020", 
-                "Cena_Y_2019", "CenaChangePercent_Y_2019", 
+                "Cena_Y_2020", "CenaChangePercent_Y_2020",
+                "Cena_Y_2019", "CenaChangePercent_Y_2019",
                 "Cena_Y_2018", "CenaChangePercent_Y_2018", "Cena_Y_2017",
                 "CenaCelkem","Detail"
             }
-            ,coreRDS.Data.Count), @"{
+            , coreRDS.Data.Count), @"{
                  'language': {
                     'url': '//cdn.datatables.net/plug-ins/1.10.19/i18n/Czech.json'
                 },
